<resources>
    <string name="app_name">JokesApp</string>
    <string name="get_a_new_one">Get a new one</string>
    <string name="programming">Programming</string>
    <string name="spooky">Spooky</string>
    <string name="back1">Back</string>
    <string name="back2">Back</string>
    <string name="animals">Animals</string>
    <string name="back3">Back</string>
    <string name="christmas">Christmas</string>
    <string name="here_s_your_pun">Here\'s your pun...</string>
    <string name="here_s_your_joke">Here\'s your joke...</string>
    <string name="joke1">joke1</string>
    <string name="category">category</string>
    <string name="random">Random</string>
    <string name="choose_the_joke_category">Choose the joke category</string>
    <string name="jokes_on_you">Jokes On You</string>
    <string name="here_s_your_programming_joke">Here\'s your programming joke...</string>
    <string name="here_s_your_spooky_joke">Here\'s your spooky joke...</string>
    <string name="joke4">joke4</string>
    <string name="joke5">joke5</string>
    <string name="here_s_your_christmas_joke">Here\'s your Christmas joke...</string>
    <string name="Pun" translatable="false">Pun</string>
    <string name="back4">Back</string>
    <string name="back6">Back</string>
    <string name="joke2">joke2</string>
    <string name="memes" translatable="false">Memes</string>
    <string name="joke3">joke3</string>
    <string name="back5">Back</string>

</resources>