<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D8AC6B"
    tools:context=".RandomJoke">

    <Button
        android:id="@+id/back4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="664dp"
        android:backgroundTint="#81BAED"
        android:onClick="Back"
        android:text="@string/back1"
        android:textColor="#192A39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/refreshRandom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="604dp"
        android:backgroundTint="#192A39"
        android:onClick="Refresh"
        android:text="@string/get_a_new_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jokeRandom"
        android:layout_width="364dp"
        android:layout_height="296dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/joke1"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273" />

    <TextView
        android:id="@+id/jokeCategory"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/category"
        android:textAlignment="textStart"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62" />

    <TextView
        android:id="@+id/Header1"
        android:layout_width="349dp"
        android:layout_height="54dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/here_s_your_joke"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />

</androidx.constraintlayout.widget.ConstraintLayout>