<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E15E34"
    tools:context=".SpookyJoke">

    <Button
        android:id="@+id/refreshSpooky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="604dp"
        android:backgroundTint="#192A39"
        android:onClick="Refresh"
        android:text="@string/get_a_new_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="664dp"
        android:backgroundTint="#81BAED"
        android:onClick="Back"
        android:text="@string/back3"
        android:textColor="#192A39"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/jokeSpooky"
        android:layout_width="326dp"
        android:layout_height="400dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/joke3"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/Header3"
        android:layout_width="349dp"
        android:layout_height="54dp"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/here_s_your_spooky_joke"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061" />
</androidx.constraintlayout.widget.ConstraintLayout>